--- a/k8s/helm/values.yml
+++ b/k8s/helm/values.yml
@@ -1,7 +1,7 @@
 replicaCount: 2
 
 mongo:
-  dbport : 27011
+  dbport : 2701111
   dbUrl: "https://awesome.uswest1.training-studio..mongodb"
   dbUserName : "dbUserName"
   dbPassword : "dbPassword11111111"
